sandbox/output
Patient.java:34: error: cannot find symbol
            now.minusDays(daysBeforeToday);
            ^
  symbol:   variable now
  location: class Patient
Patient.java:48: error: cannot find symbol
            now.minusDays(daysBeforeToday);
            ^
  symbol:   variable now
  location: class Patient
Patient.java:54: error: cannot find symbol
            if (now.isAfter(startA) &&
                ^
  symbol:   variable now
  location: class Patient
Patient.java:55: error: cannot find symbol
                    now.isBefore(endB)) {
                    ^
  symbol:   variable now
  location: class Patient
4 errors
